<resources>
    <string name="app_name">Hydraulic System Calculaor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="hydraulic_system">Hydraulic System</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_formula">Formula</string>

    <string name="home_second">Home Second</string>
    <string name="menu_convertor">Convertor</string>
    <string name="menu_symbols">Symbols</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_share">Share</string>
    <string name="menu_catalouge">Catalogue</string>
    <string name="menu_website">Website</string>
    <string name="menu_contact">Contact Us</string>
    <string name="powerpack">Powerpack</string>
    <string name="cylinder">Cylinder</string>
    <string name="contact_string">Contact</string>
    <string name="mob_no">Mob No. :</string>
    <string name="phone_number">+91-9870579574</string>
    <string name="email">Email:</string>
    <string name="location_string">Location:</string>
    <string name="location_value"><![CDATA[Plot no. 161 & 162, Amrit Steel Compound, South side GT Road, Industrial Area, Ghaziabad-201009, (UP), India]]></string>
    <string name="bore_diameter">Bore Diameter</string>
    <string name="rod_diameter">Rod Diameter</string>
    <string name="stroke">Stroke</string>
    <string name="pressure">Pressure</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="force">Force</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="bore_side">Bore Side</string>
    <string name="rod_side">Rod Side</string>
    <string name="num_cylinder">Number of Cylinders</string>
    <string name="string_up">UP</string>
    <string name="pressing">PRESSING</string>
    <string name="string_down">DOWN</string>
    <string name="speed">Speed</string>
    <string name="flow">flow</string>
    <string name="motor">motor</string>
    <string name="pump_efficiency">Pump Efficiency</string>
    <string name="motor_rpm">Motor RPM</string>
    <string name="vol_of_oil_stroke">Vol. of Oil / Stroke</string>
    <string name="tank_capacity">Tank Capacity</string>
    <string name="tagline">Unique SPM Solutions and Engineering incorporated in the year 2008 as a leading ISO-9001-2008 Certified Company engaged in manufacturing varied range of Hydraulic products including: Broaching Machines and Hydraulic Presses.</string>
    <string name="save_project">Save Project</string>
    <string name="cancel_text">Cancel</string>
    <string name="privacyNotice">The results of this application are based on standard Hydraulic System Calculation Formulas. Although every effort has been made to ensure the accuracy of the information within this application, it is your responsibility to verify the accuracy of any and all data represented.
    \n\nUnique SPM Solutions and Engineering makes no representations or warranties of any kind, expressed or implied, of the completeness, accuracy, reliability or suitability of the information provided by this application. Any reliance placed on the information obtained through this application is strictly at your own risk
    \n\nThis information provided is in compliance with ISO 3320, ISO 3321 and ISO 4393</string>
    <string name="Disclamer">Disclamer</string>
</resources>
