<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/constraint_layout_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>


    <TextView
        android:id="@+id/text_mobile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/headerTextStyle"
        android:textSize="@dimen/contact_us_textsize"
        android:text="@string/mob_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_mobileNo"
        app:layout_constraintTop_toTopOf="@id/text_mobileNo" />

    <TextView
        android:id="@+id/text_mobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_bottom_margin"
        android:text="@string/phone_number"
        style="@style/headerTextStyle"
        android:textAlignment="center"
        android:textSize="@dimen/contact_us_textsize"
        app:layout_constraintBottom_toTopOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/headerTextStyle"
        android:textSize="@dimen/contact_us_textsize"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_email"
        app:layout_constraintBottom_toBottomOf="@id/text_email" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_bottom_margin"
        style="@style/headerTextStyle"
        android:text="sales@uniquespm.com"
        android:textAlignment="center"
        android:textSize="@dimen/contact_us_textsize"
        app:layout_constraintBottom_toTopOf="@+id/text_location"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/text_mobileNo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_location_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/headerTextStyle"
        android:textSize="@dimen/contact_us_textsize"
        android:text="@string/location_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_location"
        app:layout_constraintBottom_toBottomOf="@id/text_location"/>

    <TextView
        android:id="@+id/text_location"
        android:layout_width="@dimen/text_location_width"
        android:layout_height="wrap_content"
        style="@style/headerTextStyle"
        android:text="@string/location_value"
        android:textAlignment="textStart"
        android:textSize="@dimen/contact_us_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>