<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cylinder_input_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cylinder_result_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.425">


        <TextView
            android:id="@+id/text_bore_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/bore_diameter"
            app:layout_constraintBottom_toTopOf="@+id/text_rod_diameter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_rod_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/rod_diameter"
            app:layout_constraintBottom_toTopOf="@+id/text_stroke"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bore_diameter" />

        <TextView
            android:id="@+id/text_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/stroke"
            app:layout_constraintBottom_toTopOf="@+id/text_pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_rod_diameter" />

        <TextView
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_stroke" />

        <EditText
            android:id="@+id/bore_edit_text"
            android:layout_width="@dimen/input_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_bore_diameter"
            app:layout_constraintEnd_toStartOf="@id/bore_spinner"
            app:layout_constraintTop_toTopOf="@id/text_bore_diameter" />

        <EditText
            android:id="@+id/rod_edit_text"
            android:layout_width="@dimen/input_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_rod_diameter"
            app:layout_constraintEnd_toStartOf="@id/rod_spinner"
            app:layout_constraintTop_toTopOf="@id/text_rod_diameter" />

        <EditText
            android:id="@+id/stroke_edit_text"
            android:layout_width="@dimen/input_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_stroke"
            app:layout_constraintEnd_toStartOf="@id/rod_spinner"
            app:layout_constraintTop_toTopOf="@id/text_stroke" />

        <EditText
            android:id="@+id/pressure_edit_text"
            android:layout_width="@dimen/input_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/text_pressure"
            app:layout_constraintEnd_toStartOf="@id/pressure_spinner"
            app:layout_constraintTop_toTopOf="@id/text_pressure" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/bore_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_bore_diameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_bore_diameter" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/rod_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_rod_diameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_rod_diameter" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/stroke_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_stroke" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/pressure_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_pressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cylinder_result_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/action_button_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cylinder_input_area"
        app:layout_constraintVertical_weight="0.425">

        <TextView
            android:id="@+id/text_bore_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cylinder_textsize"
            android:text="Bore Side"
            app:layout_constraintEnd_toEndOf="@id/area__bore_side_edit_text"
            app:layout_constraintStart_toStartOf="@id/area__bore_side_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_rod_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cylinder_textsize"
            android:text="Rod Side"
            app:layout_constraintEnd_toEndOf="@+id/area_edit_text"
            app:layout_constraintStart_toStartOf="@+id/area_edit_text"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/text_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/area"
            app:layout_constraintBottom_toTopOf="@+id/text_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/volume"
            app:layout_constraintBottom_toTopOf="@+id/text_force"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_area" />

        <TextView
            android:id="@+id/text_force"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/cylinder_textsize"
            android:text="@string/force"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_volume" />

        <EditText
            android:id="@+id/area_edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_area"
            app:layout_constraintEnd_toStartOf="@id/area_spinner"
            app:layout_constraintTop_toTopOf="@id/text_area" />

        <EditText
            android:id="@+id/volume_edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_volume"
            app:layout_constraintEnd_toStartOf="@id/volume_spinner"
            app:layout_constraintTop_toTopOf="@id/text_volume" />

        <EditText
            android:id="@+id/force_edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_force"
            app:layout_constraintEnd_toStartOf="@id/force_spinner"
            app:layout_constraintTop_toTopOf="@id/text_force" />

        <EditText
            android:id="@+id/area__bore_side_edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_area"
            app:layout_constraintEnd_toStartOf="@id/area_edit_text"
            app:layout_constraintTop_toTopOf="@id/text_area" />

        <EditText
            android:id="@+id/volume_bore_side__edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_volume"
            app:layout_constraintEnd_toStartOf="@id/volume_edit_text"
            app:layout_constraintTop_toTopOf="@id/text_volume" />

        <EditText
            android:id="@+id/force_bore_side_edit_text"
            android:layout_width="@dimen/result_area_edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_force"
            app:layout_constraintEnd_toStartOf="@+id/force_edit_text"
            app:layout_constraintTop_toTopOf="@id/text_force" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/area_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_area" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/volume_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_volume" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/force_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_force"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_force" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_button_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cylinder_result_area"
        app:layout_constraintVertical_weight="0.15">

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>